2011-03-09  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.25.

2011-03-08  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c :
	  Fix pdcp when used with ssh. (Issue 12)

	* tests/t2001-ssh.sh :
	  Add some simple ssh tests.

2011-03-05  Mark Grondona <mgrondona@llnl.gov>

	* tests/test-lib.sh :
	  Check ownership of pdsh binary and build directory and complain
	  and exit with error if they are different.

2011-03-04  Mark Grondona <mgrondona@llnl.gov>

	* tests/t0004-module-loading.sh, tests/t0006-pdcp.sh :
	  Set the NOTROOT prereq for all tests that require PDSH_MODULE_DIR,
	  since this environment variable is not functional as root.

	* tests/test-lib.sh :
	  Set NOTROOT prereq when tests are not run as root.

	* tests/t1000-dshbak.sh :
	  Add SANITY prereq when testing non-writable dir.

	* tests/t0001-basic.sh :
	  Don't depend on /bin/true for test of working
	  test_expect_success(), use builtin ':' instead.

2011-02-28  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.24.

	* src/modules/sshcmd.c :
	  Fix functionality of PDSH_SSH_ARGS_APPEND. The value
	  of this environment variable is now prepended to other ssh args,
	  in order for these args to appear before the target host name.

2011-02-27  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak :
	  Refactor large portions of dshbak code for
	  future maintainability.

	* tests/t1000-dshbak.sh :
	  Add tests for normal dshbak output.

2011-02-26  Mark Grondona <mgrondona@llnl.gov>

	* tests/t1000-dshbak.sh :
	  Add tests for dshbak -d and -f options.

	* doc/dshbak.1 :
	  Document -d and -f options.

	* scripts/dshbak :
	  Support writing output to a file per host based on
	  Alexander Bandura's dshdir(1) utility. Thanks to
	  Michael Shigorin for the suggestion.

2011-02-25  Mark Grondona <mgrondona@llnl.gov>

	* doc/dshbak.1 :
	  Update and reformat dshbak manpage.

	* scripts/dshbak :
	  Improve usage message and add -h option.

	* scripts/dshbak :